# rv1106_vision_work

./: .gitignore  Dockerfile  README.md  docker-compose.yml  download_libs.sh  setup_rv1106.sh  开发环境搭建通用教程.md
Cpp_example/A01_capture/: README.md  test_capture.cc
Cpp_example/A02_GPIO/: GPIO_Read.cc  README.md
Cpp_example/A03_PWM/: PWM.cc  README.md
Cpp_example/A04_ADC/: ADC.cc  README.md
Cpp_example/A05_USART/: README.md  USART_Read.cc  USART_Write.cc
Cpp_example/A06_LCD/: CMakeLists.txt  README.md  Test_LCD.cc
Cpp_example/B01_basic_method/: README.md  basic_method.cc
Cpp_example/B02_Image_information_statistics/: Image_information_statistics.cc  README.md
Cpp_example/B03_Draw/: Draw.cc  README.md
Cpp_example/C01_find_blobs/: README.md  find_blobs.cc
Cpp_example/C02_TemplateMatching/: README.md  TemplateMatching.cc
Cpp_example/C03_Template_Matching_more/: README.md  Template_Matching_more.cc
Cpp_example/C04_find_contours/: README.md  find_circle.cc  find_line.cc  find_polygon.cc
Cpp_example/C05_Finecolorandshape/: Finecolorandshape.cc  README.md
Cpp_example/C06_test_qr_code_detector/: README.md
Cpp_example/C07_test_bar_codeDetector/: README.md
Cpp_example/C08_Apriltag/: Apriltag.cc  CMakeLists.txt  README.md
Cpp_example/D01_test_detection/: README.md  test_detection.cc
Cpp_example/D02_DigitHandRecog/: README.md
Cpp_example/D03_face_recognition_system/: README.md
Cpp_example/D04_distance/: README.md  distance.cc
Cpp_example/D05_ocr_text_recognition/: README.md
Cpp_example/D06_ocr_text_detection/: README.md  ncnn_dbnet.cc
Cpp_example/D07_ocr_synthesis/: OcrLite.cc  README.md
Cpp_example/D08_pp_humanseg/: README.md  pp_humanseg.cc
Cpp_example/D11_PPOCRv3/: CMakeLists.txt  README.md  paddle2ncnn.md  ppocrv3.cc
Cpp_example/D12_ppocrv4_det/: CMakeLists.txt  README.md  postprocess.cc  postprocess.h  ppocrv4.cc
Cpp_example/D13_target_tracking/: CMakeLists.txt  README.md  test_target_tracking.cc
Cpp_example/D14_fatigue_detection/: CMakeLists.txt  README.md  facepoint_detection.cc
Cpp_example/E01_find_Laser/: CMakeLists.txt  README.md  Test_find_Laser.cc
Cpp_example/E02_find_number/: CMakeLists.txt  README.md  test_find_number.cc
Cpp_example/T01_jsoncpp/: CMakeLists.txt  README.md  jsontest.cc
Cpp_example/T02_eigen/: CMakeLists.txt  README.md  eigentest.cc
Cpp_example/T03_opus/: CMakeLists.txt  README.md  opus.cc
Cpp_example/U01_2025E_rectangle/: CMakeLists.txt  main.cc
toolchains/: arm-rockchip830-linux-uclibcgnueabihf.toolchain.cmake
